--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>about myself</h1>
-    <p>i am mahdin a junior web developer.always be with me for getting exciting contents.you can check my profile and youtube!please li
+    <p style="color:  blue ;">i am mahdin a junior web developer.always be with me for getting exciting contents.you can check my profile and youtube!please li
         ke,share,and subscribe!</p>
 </body>
 </html>
